--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     width: 100dvw;
-    height: 70dvh;
+    height: 75dvh;
 
 }
 
@@ -41,6 +41,8 @@
 #map {
     border-top: 1px solid black;
     border-left: 1px solid black;
+    height: 100%;
+    
     & .row {
         display: flex;
         width: calc(480px * 2);
